Add option for SSL through port 9357

--- a/apache2/sites-available/organizr.conf
+++ b/apache2/sites-available/organizr.conf
@@ -1,7 +1,18 @@
+Listen 9753
 Listen 9357
+
+<VirtualHost *:9753>
+  ServerName ${HTTPD_SERVERNAME}
+
+  DocumentRoot /var/www/Organizr
+</VirtualHost>
 
 <VirtualHost *:9357>
   ServerName ${HTTPD_SERVERNAME}
+
+  SSLEngine On
+  SSLCertificateFile /config/httpd/ssl/organizr.crt
+  SSLCertificateKeyFile /config/httpd/ssl/organizr.key
 
   DocumentRoot /var/www/Organizr
 </VirtualHost>
