--- a/apache2/sites-available/organizr.conf
+++ b/apache2/sites-available/organizr.conf
@@ -1,18 +1,13 @@
-Listen 9753
 Listen 9357
-
-<VirtualHost *:9753>
-  ServerName ${HTTPD_SERVERNAME}
-
-  DocumentRoot /var/www/Organizr
-</VirtualHost>
 
 <VirtualHost *:9357>
   ServerName ${HTTPD_SERVERNAME}
 
-  SSLEngine On
-  SSLCertificateFile /config/httpd/ssl/organizr.crt
-  SSLCertificateKeyFile /config/httpd/ssl/organizr.key
+  <IfDefine HTTPD_SSL>
+    SSLEngine On
+    SSLCertificateFile /config/httpd/ssl/organizr.crt
+    SSLCertificateKeyFile /config/httpd/ssl/organizr.key
+  </IfDefine>
 
   DocumentRoot /var/www/Organizr
 </VirtualHost>
