Redirect HTTP to HTTPS

--- a/apache2/sites-available/organizr.conf
+++ b/apache2/sites-available/organizr.conf
@@ -3,11 +3,20 @@ Listen 9357
 <VirtualHost *:9357>
   ServerName ${HTTPD_SERVERNAME}
 
+  <IfDefine HTTPD_REDIRECT_SSL>
+    RewriteEngine on
+    RewriteCond %{HTTPS} off
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+  </IfDefine>
+
   <IfDefine HTTPD_SSL>
-    SSLEngine On
+    SSLEngine on
     SSLCertificateFile /config/httpd/ssl/organizr.crt
     SSLCertificateKeyFile /config/httpd/ssl/organizr.key
   </IfDefine>
+
+  RemoteIPHeader X-Forwarded-For
 
   DocumentRoot /var/www/Organizr
 </VirtualHost>
