--- a/apache2/sites-available/organizr.conf
+++ b/apache2/sites-available/organizr.conf
@@ -1,16 +1,16 @@
-Listen 9357
+Listen ${HTTPD_PORT}
 
-<VirtualHost *:9357>
+<VirtualHost *:${HTTPD_PORT}>
   ServerName ${HTTPD_SERVERNAME}
 
-  <IfDefine HTTPD_REDIRECT_SSL>
+  <IfDefine REDIRECT>
     RewriteEngine on
     RewriteCond %{HTTPS} off
     RewriteCond %{HTTP:X-Forwarded-Proto} !https
     RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
   </IfDefine>
 
-  <IfDefine HTTPD_SSL>
+  <IfDefine SSL>
     SSLEngine on
     SSLCertificateFile /config/httpd/ssl/organizr.crt
     SSLCertificateKeyFile /config/httpd/ssl/organizr.key
