--- a/apache2/sites-available/organizr.conf
+++ b/apache2/sites-available/organizr.conf
@@ -19,4 +19,9 @@ Listen ${HTTPD_PORT}
   RemoteIPHeader X-Forwarded-For
 
   DocumentRoot /var/www/Organizr
+
+  <Directory /var/www/Organizr>
+    DirectoryIndex index.php
+    AllowOverride All
+  </Directory>
 </VirtualHost>
