Changes for Organizr v2.1

--- a/apache2/sites-available/organizr.conf
+++ b/apache2/sites-available/organizr.conf
@@ -21,6 +21,12 @@ Listen ${HTTPD_PORT}
   DocumentRoot /var/www/Organizr
 
   <Directory /var/www/Organizr>
+    RewriteEngine on
+    RewriteBase /api/v2
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^ /api/v2/index.php [QSA,L]
+
     DirectoryIndex index.php
     AllowOverride All
   </Directory>
